--- a/styles.css
+++ b/styles.css
@@ -783,34 +783,35 @@ footer {
         width: 21.5rem;
     }
 
-    #services-container #cards-container .cards #ombre {
-        height: 45rem; 
+    #services-container #cards-container #ombre {
+        height: 39rem; 
     }
 
-    #services-container #cards-container .cards #microblading {
+    #services-container #cards-container #microblading {
+        height: 27rem;
+    }
+
+    #services-container #cards-container #combo {
+        height: 37rem; 
+    }
+
+    #services-container #cards-container #saline{
+        height: 48rem; 
+    }
+
+    #services-container #cards-container #correction {
         height: 30rem;
     }
 
-    #services-container #cards-container .cards #combo {
-        height: 40rem; 
-    }
-
-    #services-container #cards-container .cards #saline{
-        height: 90rem; 
-    }
-
-    #services-container #cards-container .cards #correction {
-        height: 30rem;
-    }
-
-    #services-container #cards-container .cards #touchup {
-        height: 22rem;
+    #services-container #cards-container #touchup {
+        height: 20rem;
     }
 
     #services-container #cards-container #training-card {
         width: 56.625rem;
         margin-bottom: 10vh;
-        height: 110.5rem; 
+        height: 90.5rem; 
+        margin-bottom: 10rem;
     }
 
     #services-container #cards-container .cards p{
