--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html {
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
