--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
     min-height: 100vh;
-    max-width: 100vw i !important;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -482,6 +482,10 @@ main {
 
 /************ POLICIES & FAQ SECTION ************/
 
+#faq {
+    height: 55rem;
+}
+
 #faq #faq-title-wrap {
     position: absolute;
 
@@ -524,6 +528,10 @@ main {
 
 #faq #faq-info-wrap .faq-info{
     position: absolute;
+}
+
+#faq #faq-info-wrap .faq-info li{
+    margin-bottom: 1.5rem;
 }
 
 .hidden {
