--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,13 @@ html {
 
 body {
     min-height: 100vh;
-    width: 100%;
     max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 img, video {
