--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html {
     height: 100vh;
     width: 100vw;
 }
+
+/* html {
+
+} */
 
 body {
     min-height: 100vh;
@@ -927,7 +928,7 @@ footer {
     }
 }
 
-@media (max-width: 539px) {
+@media screen and (min-width: 301px) and (max-width: 539px) {
     #faq {
         display: flex;
         justify-content: center;
