--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
     height: 100vh;
     width: 100vw;
 }
-
-/* html {
-
-} */
 
 body {
     min-height: 100vh;
