--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 html {
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
     align-items: center;
     justify-content: space-between;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 img, video {
