--- a/styles.css
+++ b/styles.css
@@ -929,7 +929,13 @@ footer {
     }
 }
 
-@media screen and (min-width: 301px) and (max-width: 539px) {
+/* @media screen and (min-width: 301px) and (max-width: 539px) {
+
+} */
+
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
     #faq {
         display: flex;
         justify-content: center;
