--- a/styles.css
+++ b/styles.css
@@ -934,8 +934,8 @@ footer {
 } */
 
 @media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+and (min-width : 320px) 
+and (max-width : 480px) {
     #faq {
         display: flex;
         justify-content: center;
