--- a/styles.css
+++ b/styles.css
@@ -929,13 +929,7 @@ footer {
     }
 }
 
-/* @media screen and (min-width: 301px) and (max-width: 539px) {
-
-} */
-
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
+@media screen and (min-width: 301px) and (max-width: 539px) {
     #faq {
         display: flex;
         justify-content: center;
