--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-    min-height: 100vh;
-    max-width: 100vw;
+    /* min-height: 100vh;
+    max-width: 100vw; */
     display: flex;
     flex-direction: column;
     align-items: center;
