--- a/styles.css
+++ b/styles.css
@@ -935,8 +935,7 @@ footer {
         justify-content: center;
         width: 18.75rem;
         margin-bottom: 10rem;
-        touch-action: none;
-        overflow-y: scroll;
+        touch-action: pan-y;
     }
 
     #faq #faq-title-wrap{
