--- a/styles.css
+++ b/styles.css
@@ -871,6 +871,8 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         width: 33.75rem;
+        touch-action: pan-y;
+        overflow-x: hidden;
     }
     
     #faq #faq-title-wrap #faq-titles {
@@ -901,6 +903,8 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         width: 28rem;
+        touch-action: pan-y;
+        overflow-x: hidden;
     }
 
     #faq #faq-title-wrap #faq-titles {
@@ -936,6 +940,7 @@ footer {
         width: 18.75rem;
         margin-bottom: 10rem;
         touch-action: pan-y;
+        overflow-x: hidden;
     }
 
     #faq #faq-title-wrap{
