--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+textarea {
+    font-family: 'helvetica';
+}
+
 html {
     height: 100vh;
     width: 100vw;
@@ -171,7 +175,7 @@ nav #nav-bar li {
     color: white;
 
     border-style: solid;
-    border-radius: 5%;
+    border-radius: 25px;
     border-color: #F7C4CD;
     box-shadow: 0px 0px 10px 10px #F7C4CD;
 
@@ -367,7 +371,8 @@ main {
     position: absolute;
     width: 15rem;
     height: 5rem;
-    border-radius: 5%;
+    border-radius: 25px;
+    margin-top: 1.25rem;
 
     background-color: black;
     top: 0;
@@ -570,7 +575,6 @@ main {
 #contacts-box #email-form {
     position: absolute;
     top: 11rem;
-
 }
 
 #contacts-box #email-form input {
