--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,15 @@ html {
 }
 
 body {
-    /* min-height: 100vh;
-    max-width: 100vw; */
+    min-height: 100vh;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
+    touch-action: pan-y;
 }
 
 img, video {
@@ -875,7 +876,6 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         width: 33.75rem;
-        touch-action: pan-y;
         overflow-x: hidden;
     }
     
@@ -907,7 +907,6 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         width: 28rem;
-        touch-action: pan-y;
         overflow-x: hidden;
     }
 
@@ -943,7 +942,6 @@ footer {
         justify-content: center;
         width: 18.75rem;
         margin-bottom: 10rem;
-        touch-action: pan-y;
         overflow-x: hidden;
     }
 
