--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ textarea {
 html {
     height: 100vh;
     width: 100vw;
-    touch-action: pan-y;
     overflow-x: hidden;
 }
 
@@ -877,6 +876,11 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         width: 33.75rem;
+        touch-action: pan-y;
+    }
+
+    #faq #faq-title-wrap {
+        margin-bottom: 10rem;
     }
     
     #faq #faq-title-wrap #faq-titles {
@@ -907,6 +911,11 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         width: 28rem;
+        touch-action: pan-y;
+    }
+
+    #faq #faq-title-wrap {
+        margin-bottom: 10rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
@@ -941,10 +950,11 @@ footer {
         justify-content: center;
         width: 18.75rem;
         margin-bottom: 20rem;
+        touch-action: pan-y;
     }
 
-    #faq #faq-title-wrap{
-        width: 18.75rem;
+    #faq #faq-title-wrap {
+        margin-bottom: 10rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
@@ -996,6 +1006,11 @@ footer {
     #faq {
         display: flex;
         justify-content: center;
+        margin-bottom: 10rem;
+        touch-action: pan-y;
+    }
+
+    #faq #faq-title-wrap {
         margin-bottom: 10rem;
     }
 
