--- a/styles.css
+++ b/styles.css
@@ -880,7 +880,7 @@ footer {
     }
 
     #faq #faq-title-wrap {
-        margin-bottom: 10rem;
+        padding-bottom: 10rem;
     }
     
     #faq #faq-title-wrap #faq-titles {
@@ -915,7 +915,7 @@ footer {
     }
 
     #faq #faq-title-wrap {
-        margin-bottom: 10rem;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
@@ -954,7 +954,7 @@ footer {
     }
 
     #faq #faq-title-wrap {
-        margin-bottom: 10rem;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
@@ -1011,7 +1011,7 @@ footer {
     }
 
     #faq #faq-title-wrap {
-        margin-bottom: 10rem;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
