--- a/styles.css
+++ b/styles.css
@@ -858,7 +858,6 @@ footer {
 
     #services-container #cards-container #training-card {
         width: 56.625rem;
-        margin-bottom: 10vh;
         height: 116.5rem; 
         margin-bottom: 6rem;
     }
@@ -877,6 +876,7 @@ footer {
         margin-bottom: 10rem;
         width: 33.75rem;
         touch-action: pan-y;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap {
@@ -912,6 +912,7 @@ footer {
         margin-bottom: 10rem;
         width: 28rem;
         touch-action: pan-y;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap {
@@ -951,6 +952,7 @@ footer {
         width: 18.75rem;
         margin-bottom: 20rem;
         touch-action: pan-y;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap {
@@ -1008,6 +1010,7 @@ footer {
         justify-content: center;
         margin-bottom: 10rem;
         touch-action: pan-y;
+        padding-bottom: 10rem;
     }
 
     #faq #faq-title-wrap {
