--- a/styles.css
+++ b/styles.css
@@ -876,7 +876,7 @@ footer {
         margin-bottom: 10rem;
         width: 33.75rem;
         touch-action: pan-y;
-        padding-bottom: 10rem;
+        height: 65rem;
     }
 
     #faq #faq-title-wrap {
@@ -913,6 +913,7 @@ footer {
         width: 28rem;
         touch-action: pan-y;
         padding-bottom: 10rem;
+        height: 65rem;
     }
 
     #faq #faq-title-wrap {
@@ -953,6 +954,7 @@ footer {
         margin-bottom: 20rem;
         touch-action: pan-y;
         padding-bottom: 10rem;
+        height: 65rem;
     }
 
     #faq #faq-title-wrap {
@@ -1011,6 +1013,7 @@ footer {
         margin-bottom: 10rem;
         touch-action: pan-y;
         padding-bottom: 10rem;
+        height: 65rem;
     }
 
     #faq #faq-title-wrap {
