--- a/styles.css
+++ b/styles.css
@@ -876,11 +876,14 @@ footer {
         margin-bottom: 10rem;
         width: 33.75rem;
         touch-action: pan-y;
-        height: 75rem;
     }
 
     #faq #faq-title-wrap {
         padding-bottom: 10rem;
+    }
+
+    #faq #faq-title-wrap #faq-info-wrap{
+        height: 55rem;
     }
     
     #faq #faq-title-wrap #faq-titles {
@@ -913,11 +916,14 @@ footer {
         width: 28rem;
         touch-action: pan-y;
         padding-bottom: 10rem;
-        height: 75rem;
     }
 
     #faq #faq-title-wrap {
         padding-bottom: 10rem;
+    }
+
+    #faq #faq-title-wrap #faq-info-wrap{
+        height: 55rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
@@ -954,11 +960,14 @@ footer {
         margin-bottom: 20rem;
         touch-action: pan-y;
         padding-bottom: 10rem;
-        height: 75rem;
     }
 
     #faq #faq-title-wrap {
         padding-bottom: 10rem;
+    }
+
+    #faq #faq-title-wrap #faq-info-wrap{
+        height: 55rem;
     }
 
     #faq #faq-title-wrap #faq-titles {
