fixed booking hopefully

--- a/styles.css
+++ b/styles.css
@@ -990,10 +990,10 @@ footer {
 
         padding-bottom: 10rem;
     }
-
+/* 
     #faq #faq-info-wrap .booking{
         left: -1.25rem;
-    }
+    } */
 
     #faq #faq-info-wrap .booking #send {
         margin-left: 0rem;
