--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,7 @@ main {
     border-radius: 25px;
 }
 
-#services-container #cards-container #ombre, #services-container #cards-container #microblading {
+#services-container #cards-container #ombre, #services-container #cards-container #microblading, #services-container #cards-container #scalp{
     height: 22.75rem; 
 }
 
